[package]
name = "tsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queues = "1.0.2"
serde = "1.0.130"
diesel = { version = "2.0.0", features = ["postgres","chrono"] }
dotenvy = "0.15"
chrono = "^0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]