[package]
name = "tsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queues = "1.0.2"
serde = "1.0.130"
kd-tree = "0.4.2"

diesel = { version = "2.0.0", features = ["postgres","chrono"] }
dotenvy = "0.15"
chrono = "^0"
jsonwebtoken = "8.1.1"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }

rand = "0.8.5"
md5 = "0.7.0"
sha2 = "0.10.6"
regex = "1.6.0"
pdqselect = "0.1.1"
geoutils =  "0.5.1"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]